[tool.poetry]
name = "pdf-to-txt"
version = "0.1.0"
description = "A tool to extract text from PDFs and process it with Gemini AI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
Flask = "^2.0.2"
google-generativeai = "^0.7.1"
PyMuPDF = "^1.22.5"  # PyMuPDF is for working with PDF files directly in Python
requests = "^2.32.3"
tqdm = "^4.66.4"
gunicorn = "^20.1.0"
Pillow = "^9.2.0"  # Pillow is used for image processing (e.g., to display images)
poppler-utils = "^0.1.0"  # Poppler-utils for handling PDF to image conversion

[tool.poetry.scripts]
start = "gunicorn main:app"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
